--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 				<label>$$ V_{Reset} \enspace (mV) $$</label>
 				<input id="vreset" type="text"/><br>
 
-				<button onclick="update()">Update</button>
+				<button onclick="update()">Plot</button>
 			</div>
 			<div id="main">
 				<div id="voltage"></div>
